初始化项目：PDF翻译工具

--- a/.env.example
+++ b/.env.example
@@ -2,21 +2,22 @@
 
 # API配置
 # 可选值: GOOGLE, SILICONFLOW, DEEPSEEK, SIMULATE
-TRANSLATOR_API=SIMULATE
+TRANSLATOR_API=SILICON
 
 # SiliconFlow API配置 (如果使用SiliconFlow翻译)
-SILICONFLOW_API_KEY=your_api_key_here
+SILICONFLOW_API_KEY=your_api_key
 SILICONFLOW_API_URL=https://api.siliconflow.cn/v1/chat/completions
 
 # DeepSeek API配置 (如果使用DeepSeek翻译)
-DEEPSEEK_API_KEY=your_api_key_here
+DEEPSEEK_API_KEY=your_api_key
 DEEPSEEK_API_URL=https://api.deepseek.com/v1/chat/completions
 
 # 翻译设置
-MAX_TRANSLATE_LENGTH=3000
-TRANSLATE_DELAY=3000
+MAX_TRANSLATE_LENGTH=2000  # 最大翻译长度，3000-9000之间较为合理
+TRANSLATE_DELAY=1000     # 翻译请求间隔(毫秒)，建议至少5000以上
 MAX_RETRY_ATTEMPTS=5
-RETRY_DELAY_BASE=2000
+RETRY_DELAY_BASE=5000
+BATCH_CHAR_LIMIT=3000    # 每批翻译的字符数限制
 
 # 服务器配置
 PORT=3030
