--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,28 @@
 # 依赖目录
 node_modules/
 
-# 配置文件
+# 环境配置
 .env
 
 # 临时文件
-/temp/
-/uploads/
-/outputs/
+temp/
+uploads/
+outputs/
+
+# 系统文件
+.DS_Store
+*.log
+
+# IDE配置
+.vscode/
+.idea/
 
 # 日志文件
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # 编辑器配置
-.idea/
-.vscode/
 *.swp
 *.swo
-
-# 操作系统文件
-.DS_Store
 Thumbs.db 
