--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "convert": "node cli.js"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.0",
     "adm-zip": "^0.5.16",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "epub": "^1.2.1",
     "express": "^4.19.2",
     "fs-extra": "^11.2.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.7",
+    "pdf-parse": "^1.1.1",
     "puppeteer": "^22.8.2",
     "uuid": "^9.0.1",
-    "xml2js": "^0.6.2",
-    "@vitalets/google-translate-api": "^9.2.0",
-    "node-fetch": "^2.6.7"
+    "xml2js": "^0.6.2"
   }
 }
